--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: rust
 rust:
- - stable
- - beta
- - nightly
+- stable
+- beta
+- nightly
+before_install:
+- openssl aes-256-cbc -K $encrypted_7399a3a37a43_key -iv $encrypted_7399a3a37a43_iv
+  -in travis.enc -out travis -d
+after_success: sh scripts/travis-doc-upload.sh
