--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rust:
 - stable
 - beta
 - nightly
+os:
+- linux
+- osx
 before_install:
 - openssl aes-256-cbc -K $encrypted_7399a3a37a43_key -iv $encrypted_7399a3a37a43_iv
   -in scripts/travis.enc -out scripts/id_rsa -d
