--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "heatmap"
 version = "0.1.3"
 authors = ["Brian Martin <brayniac@gmail.com>"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 readme = "README.md"
 
 homepage = "https://github.com/brayniac/heatmap"
