--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "heatmap"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Brian Martin <brayniac@gmail.com>"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -14,5 +14,5 @@ description = "heatmap storage, set of histograms"
 keywords = [ "heatmap", "histogram", "percentile", "statistics", "stats" ]
 
 [dependencies]
-time = "*"
-histogram = "0.3.4"
+time = "0.1.34"
+histogram = "0.3.5"
