--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "heatmap"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Brian Martin <brayniac@gmail.com>"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -15,3 +15,4 @@ keywords = [ "heatmap", "histogram", "percentile", "statistics", "stats" ]
 
 [dependencies]
 histogram = "0.6.1"
+time = "0.1.35"
