--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ matrix:
       script:
         - (travis_wait 20 cargo install rustfmt || true)
         - cargo fmt -- --write-mode=diff
+    - os: linux
+      rust: nightly
+      env: TYPE=clippy RUST_BACKTRACE=1
+      script:
+        - (travis_wait 20 cargo install clippy || true)
+        - cargo clippy
