--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ matrix:
       rust: stable
       env: TYPE=rustfmt RUST_BACKTRACE=1
       script:
-        - (travis_wait 20 cargo install rustfmt || true)
+        - (travis_wait 20 cargo install -f rustfmt || true)
         - cargo fmt -- --write-mode=diff
     - os: linux
       rust: nightly
       env: TYPE=clippy RUST_BACKTRACE=1
       script:
-        - (travis_wait 20 cargo install clippy || true)
+        - (travis_wait 20 cargo install -f clippy || true)
         - cargo clippy
